# fast-api-sample

./: .gitignore  pyproject.toml
app/: main.py
app/common/: authentication.py
app/models/: users.py
app/routers/: users.py
app/settings/: base.py
tests/common/: test_authentication.py
