[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jaemoon <jaemoon406@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
redis = "^5.0.7"
mysqlclient = "^2.2.4"
black = "^24.4.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
